# monorepo

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  go.sum
LeetCode/AddTwoNumbers/: BUILD.bazel  addtwonumbers.go  addtwonumbers_test.go
LeetCode/TwoSum/: BUILD.bazel  twosum.go  twosum_test.go
LeetCode/kokoeatingbananas/: BUILD.bazel  mineatingspeed.go  mineatingspeed_test.go
LeetCode/mergeintervals/: BUILD.bazel  mergeintervals.go  mergeintervals_test.go
LeetCode/mergesortedarray/: BUILD.bazel  mergesortedarray.go  mergesortedarray_test.go
LeetCode/plusone/: BUILD.bazel  plusone.go  plusone_test.go
my-first-controller/: BUILD.bazel  README.md  main.go
my-first-controller/manifests/: mcr-crd.yaml  mcr.yaml  wc-crd.yaml
playground/: BUILD.bazel
playground/concurrency/context/: BUILD.bazel  main.go
playground/concurrency/fanoutfaninpattern/: BUILD.bazel  main.go
playground/concurrency/ordonepattern/: BUILD.bazel  main.go
playground/concurrency/pipeline/: BUILD.bazel  main.go
simplego/: BUILD.bazel  main.go
simplego/fortune/: BUILD.bazel  fortune_test.go
