load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "my-first-controller_lib",
    srcs = ["main.go"],
    importpath = "github.com/bmcmanus-apex/monorepo/my-first-controller",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//dynamic",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//util/homedir",
    ],
)

go_binary(
    name = "my-first-controller",
    embed = [":my-first-controller_lib"],
    visibility = ["//visibility:public"],
)
