load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "playground_lib",
    srcs = ["main.go"],
    importpath = "github.com/bmcmanus-apex/monorepo/playground",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "playground",
    embed = [":playground_lib"],
    visibility = ["//visibility:public"],
)
