load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "simplego",
    embed = [":simplego_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "simplego_lib",
    srcs = ["main.go"],
    importpath = "github.com/bmcmanus-apex/monorepo/simplego",
    visibility = ["//visibility:private"],
    deps = ["//simplego/fortune"],
)
