load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fanoutfaninpattern_lib",
    srcs = ["main.go"],
    importpath = "github.com/bmcmanus-apex/monorepo/playground/concurrency/fanoutfaninpattern",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fanoutfaninpattern",
    embed = [":fanoutfaninpattern_lib"],
    visibility = ["//visibility:public"],
)
