load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ordonepattern_lib",
    srcs = ["main.go"],
    importpath = "github.com/bmcmanus-apex/monorepo/playground/concurrency/ordonepattern",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ordonepattern",
    embed = [":ordonepattern_lib"],
    visibility = ["//visibility:public"],
)
